[metadata]
# replace with your username:
name = racing-pkg-artur50000
version = 0.0.1
author = Artur Sotcenko
author_email = artur@mail.ru
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.foxminded.com.ua/artur50000/task-6-report-of-monaco-2018-racing
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src